Fixing the right menu

--- a/views/partial_profile.html
+++ b/views/partial_profile.html
@@ -5,7 +5,7 @@
 			<ul class="single-profile">
             	<li class="col-md-3 no-padd img-avatar">
             		<span class="avatar-profile">
-            			<img alt="" ng-src="{{userData.avatar}}" title="Edit profile image" id="profile_img" ng-model="file" class="avatar avatar-70 photo avatar-default cursor pic" height="200" width="200" type="file" ngf-select="upload($file, $invalidFiles)" accept="image/*" ngf-max-height="1000" ngf-max-size="1MB">
+            			<img alt="" ng-src="{{userData.avatar}}" title="Edit profile image" id="profile_img" ng-model="file" class="avatar avatar-70 photo avatar-default pic" height="200" width="200" type="file" ngf-select="upload($file, $invalidFiles)" accept="image/*" ngf-max-height="1000" ngf-max-size="1MB">
             			</span>
             			
             	</li>
